<resources>
    <string name="app_name">Load</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="load_screen">Load Game</string>
    <string name="load_1">Load 1</string>
    <string name="load_2">Load 2</string>
    <string name="load_3">Load 3</string>
    <string name="number_of_players">Number of Players</string>
    <string name="player_number">Player 1</string>
    <string name="player_name">Enter Name</string>
    <string name="ok">OK</string>
    <string name="start">Done</string>
    <string name="second_ok">OK</string>
    <string name="save_game">Save</string>
    <string name="save_screen">Save Game</string>
    <string name="save_1">Save 1</string>
    <string name="save_2">Save 2</string>
    <string name="save_3">Save 3</string>
    <string name="takePhoto">Take Photo</string>
    <string name="save_your_game">Save Your Game</string>
    <string name="enter_the_name_for_your_save">Enter The Name For Your Save</string>
    <string name="score">0</string>
    <string name="player_score_ok">Ok</string>
    <string name="player_score_cancel">Cancel</string>
    <string name="change_score_to">Change To</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="previous_player">&lt;</string>
    <string name="add_resource">Add Resource</string>
    <string name="playername">playerName</string>
    <string name="draw_card">Draw Card</string>
    <string name="draw_hand">Draw Hand</string>
    <string name="player_profile_image">Player Profile Image</string>
    <string name="load">Load</string>
    <string name="dice">Dice</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="delete">delete</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d10">d10</string>
    <string name="d20">d20</string>
    <string name="roll_plus">+</string>
    <string name="roll">Roll</string>
    <string name="player_name_header">Player Name Header</string>
    <string name="return_to_score">Return to Score</string>
    <string name="go_to_cards">Go To Cards</string>
    <string name="dx">dx</string>
    <string name="draw_pile">Draw Pile</string>
    <string name="discard_pile">Discard Pile</string>
    <string name="add_resource_ok">Ok</string>
    <string name="add_resource_cancel">Cancel</string>
    <string name="enter_resource">Enter Resource Name</string>
    <string name="enter_resource_value">Enter Resource Value</string>
    <string name="default_resource_value">0</string>
    <string name="return_to_game">Return to Game</string>
    <string name="new_game_plus">+</string>
    <string name="new_game_minus">-</string>
    <string name="cloud_saves">Cloud Saves</string>
    <string name="local_saves">Local Saves</string>
    <string name="shuffle">Shuffle</string>
    <string name="resource_name">Name</string>
    <string name="hide_hand">Hide Hand</string>
    <string name="next_player"><![CDATA[>]]></string>
    <string name="prev_player"><![CDATA[<]]></string>
    <string name="a_card_from_the_current_player_s_hand">A card from the current Player\'s Hand.</string>
    <string name="grid">Grid</string>
    <string name="home">Home</string>
    <string name="card">Card</string>
    <string name="save">Save</string>
    <string name="log_out">Log Out</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t Have An Account? Sign Up Here</string>
    <string name="login">Login</string>
    <string name="_1">1</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="registration">Registration</string>
    <string name="sign_out">Sign Out</string>
    <string name="back">Back</string>
    <string name="save_to_local">Save To Local</string>
    <string name="save_to_cloud">Save To Cloud</string>
    <string name="enter_player_name">Enter Player Name</string>
    <string name="picturePreviewImage">Preview of selected picture.</string>
    <string name="d12">d12</string>
    <string name="d100">d100</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
</resources>
