<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RollDiceActivity">

    <TextView
        android:id="@+id/diceBeingRolled"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/sumOfDice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sumOfDice"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/d6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diceBeingRolled" />

    <Button
        android:id="@+id/d4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/d4"
        app:layout_constraintTop_toBottomOf="@+id/sumOfDice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/d6"
        app:layout_constraintBottom_toTopOf="@id/d10" />

    <Button
        android:id="@+id/d6"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/d6"
        app:layout_constraintTop_toBottomOf="@+id/sumOfDice"
        app:layout_constraintLeft_toRightOf="@id/d4"
        app:layout_constraintRight_toLeftOf="@id/d8"
        app:layout_constraintBottom_toTopOf="@id/d20" />

    <Button
        android:id="@+id/d8"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/d8"
        app:layout_constraintTop_toBottomOf="@+id/sumOfDice"
        app:layout_constraintLeft_toRightOf="@id/d6"
        app:layout_constraintRight_toLeftOf="@id/delete"
        app:layout_constraintBottom_toTopOf="@id/dx"  />

    <Button
        android:id="@+id/d10"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/d10"
        app:layout_constraintTop_toBottomOf="@+id/d4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/d20"
        app:layout_constraintBottom_toTopOf="@id/seven" />

    <Button
        android:id="@+id/d20"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/d20"
        app:layout_constraintTop_toBottomOf="@+id/d6"
        app:layout_constraintLeft_toRightOf="@id/d10"
        app:layout_constraintRight_toLeftOf="@id/dx"
        app:layout_constraintBottom_toTopOf="@id/eight" />

    <Button
        android:id="@+id/dx"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/dx"
        app:layout_constraintTop_toBottomOf="@+id/d8"
        app:layout_constraintLeft_toRightOf="@id/d20"
        app:layout_constraintRight_toLeftOf="@id/roll_plus"
        app:layout_constraintBottom_toTopOf="@id/nine"  />

    <Button
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/seven"
        app:layout_constraintTop_toBottomOf="@+id/d10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/eight"
        app:layout_constraintBottom_toTopOf="@id/four" />

    <Button
        android:id="@+id/eight"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/eight"
        app:layout_constraintTop_toBottomOf="@+id/d20"
        app:layout_constraintLeft_toRightOf="@id/seven"
        app:layout_constraintRight_toLeftOf="@id/nine"
        app:layout_constraintBottom_toTopOf="@id/five" />

    <Button
        android:id="@+id/nine"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/nine"
        app:layout_constraintTop_toBottomOf="@+id/dx"
        app:layout_constraintLeft_toRightOf="@id/eight"
        app:layout_constraintRight_toLeftOf="@id/roll_plus"
        app:layout_constraintBottom_toTopOf="@id/six" />

    <Button
        android:id="@+id/four"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/four"
        app:layout_constraintTop_toBottomOf="@+id/seven"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/five"
        app:layout_constraintBottom_toTopOf="@id/one" />

    <Button
        android:id="@+id/five"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/five"
        app:layout_constraintTop_toBottomOf="@+id/eight"
        app:layout_constraintLeft_toRightOf="@id/four"
        app:layout_constraintRight_toLeftOf="@id/six"
        app:layout_constraintBottom_toTopOf="@id/two" />

    <Button
        android:id="@+id/six"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/six"
        app:layout_constraintTop_toBottomOf="@+id/nine"
        app:layout_constraintLeft_toRightOf="@id/five"
        app:layout_constraintRight_toLeftOf="@id/roll_plus"
        app:layout_constraintBottom_toTopOf="@id/three" />

    <Button
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/three"
        app:layout_constraintTop_toBottomOf="@+id/six"
        app:layout_constraintLeft_toRightOf="@id/two"
        app:layout_constraintRight_toLeftOf="@id/roll"
        app:layout_constraintBottom_toTopOf="@id/zero" />


    <Button
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/two"
        app:layout_constraintTop_toBottomOf="@+id/five"
        app:layout_constraintLeft_toRightOf="@id/one"
        app:layout_constraintRight_toLeftOf="@id/three"
        app:layout_constraintBottom_toTopOf="@id/zero" />

    <Button
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/one"
        app:layout_constraintTop_toBottomOf="@+id/four"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/two"
        app:layout_constraintBottom_toTopOf="@id/zero" />

    <Button
        android:id="@+id/zero"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/zero"
        app:layout_constraintTop_toBottomOf="@+id/two"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/roll"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/roll_plus"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/roll_plus"
        app:layout_constraintTop_toBottomOf="@+id/delete"
        app:layout_constraintLeft_toRightOf="@id/nine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/roll" />

    <Button
        android:id="@+id/roll"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/roll"
        app:layout_constraintTop_toBottomOf="@+id/roll_plus"
        app:layout_constraintLeft_toRightOf="@id/three"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/delete"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/sumOfDice"
        app:layout_constraintLeft_toRightOf="@id/d8"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/roll_plus" />
</android.support.constraint.ConstraintLayout>