<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity">

    <EditText
        android:layout_margin="15dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/defaultText"
        android:hint="@string/enter_email"
        android:textColorHint="@color/defaultText"
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintBottom_toTopOf="@id/editTextPass"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:layout_margin="15dp"
        android:inputType="textPassword"
        android:textColor="@color/defaultText"
        android:hint="@string/enter_password"
        android:textColorHint="@color/defaultText"
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintBottom_toTopOf="@id/buttonSignIn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/buttonSignIn"
        android:text="@string/sign_in"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextPass"
        app:layout_constraintBottom_toTopOf="@id/textViewSignUp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:textAlignment="center"
        android:textColor="@color/fui_linkColor"
        android:text="@string/don_t_have_an_account_sign_up_here"
        android:id="@+id/textViewSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/login"
        android:layout_width="65dp"
        android:textColor="@color/defaultText"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="175dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="65dp"
        android:text="@string/login"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTextEmail" />
</android.support.constraint.ConstraintLayout>