<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".EditPlayerScoreDialogActivity">

    <Button
        android:id="@+id/minus_button"
        android:background="@color/colorAccent"
        android:layout_width="70dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/minus"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/difference_in_score"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/plus_button"
        android:background="@color/colorAccent"
        android:layout_width="70dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/plus"
        app:layout_constraintLeft_toRightOf="@id/difference_in_score"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/difference_in_score"
        android:textColor="@color/defaultText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_1"
        app:layout_constraintLeft_toRightOf="@+id/minus_button"
        app:layout_constraintRight_toLeftOf="@+id/plus_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player_score"/>

    <TextView
        android:id="@+id/player_score"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minus_button"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="144dp" />
</android.support.constraint.ConstraintLayout>